--- a/templates/home.html
+++ b/templates/home.html
@@ -10,7 +10,7 @@
             <h1 class="display-5 fw-bold lh-1 mb-3">Sentiment Analysis Product Reviews with RNN</h1>
             <p class="lead">Review feature becomes important in developing sales and becomes one of the considerations for customers in making purchases. Analysis of Tokopedia product sentiment reviews can provide an opportunity to see how Tokopedia customers respond to product quality and seller delivery.</p>
             <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-              <a type="button" href="/prediction" class="btn1">Start Prediction</a>
+              <a type="button" href="/predict" class="btn1">Start Prediction</a>
             </div>
           </div>
         </div>
