--- a/templates/includes/_navbar.html
+++ b/templates/includes/_navbar.html
@@ -19,7 +19,7 @@
               <a class="nav-link active" href="/">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/">Data</a>
+              <a class="nav-link" href="/data-set">Data</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/about">About</a>
