--- a/templates/home.html
+++ b/templates/home.html
@@ -7,7 +7,7 @@
             <img src="{{url_for('static', filename='assets/images/hero.svg')}}" class="d-block mx-lg-auto img-fluid" alt="Hero" width="100%" height="100%" loading="lazy">
           </div>
           <div class="col-lg-6">
-            <h1 class="display-5 fw-bold lh-1 mb-3">Sentiment Analysis Product Reviews with RNN</h1>
+            <h1 class="display-5 fw-bold lh-1 mb-3">Sentiment Analysis Product Reviews with LSTM</h1>
             <p class="lead">Review feature becomes important in developing sales and becomes one of the considerations for customers in making purchases. Analysis of Tokopedia product sentiment reviews can provide an opportunity to see how Tokopedia customers respond to product quality and seller delivery.</p>
             <div class="d-grid gap-2 d-md-flex justify-content-md-start">
               <a type="button" href="/predict" class="btn1">Start Prediction</a>
